--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,7 @@ body{
     height: 50px;
     width: 50px;
 }
-@media (min-width: 700px){
+@media (max-width: 400px){
     #sobreodev {
         position: relative;
         top: 600px;
