--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,7 @@ body{
     height: 50px;
     width: 50px;
 }
-@media (max-width: 480px){
+@media (min-width: 480px){
     #sobreodev {
         position: relative;
         top: 600px;
