--- a/styles.css
+++ b/styles.css
@@ -129,39 +129,31 @@ body{
 #foto2 {
     border-radius:150px;
     position: absolute ;
-    left: 350px;
-    top: 790px;
+    left: 350px; top: 790px;
     height: 50px;
     width: 50px;
 }
-@media (min-width: 480px){
+@media (max-width: 700px){
     #sobreodev {
         position: relative;
         top: 600px;
         left: 0px;
         background-color: rgb(2, 1, 3);
         border-radius: 50px;
-        width: 700px;
-        height: 860px;
+        width: 485px;
+        height: 700px;
     }
     #biograpy {
-        color: rgb(27, 27, 22); 
-        font-size: 56px;
+        color: rgb(32, 247, 25); 
+        font-size: 14px;
     }
     #foto1 {
         border-radius: 150px;
         position: relative;
         left: 150px;
         top: 50px; 
-        height: 300px;
-        width: 300px;
-    }
-    #foto2 {
-        border-radius:150px;
-        position: absolute ;
-        left: 250px; 
-        top: 580px;
-        width: 50px;
+        height: 150px;
+        width: 150px;
     }
     #imagem {
         width: 150px;
