--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,7 @@ body{
     border-radius:150px;
     position: absolute ;
     left: 340px; 
-    top: 740px;
+    top: 780px;
     height: 50px;
     width: 50px;
 }
@@ -155,6 +155,14 @@ body{
         height: 150px;
         width: 150px;
     }
+    #foto2 {
+        border-radius: 150px;
+        position: absolute;
+        left: 240px;
+        top: 582px; 
+        height: 50px;
+        width: 50px;
+    }
     #imagem {
         width: 150px;
         height: 150px;
@@ -165,8 +173,8 @@ body{
     #sliders img {
         top: 560px;
         left: 10px;
-        width: 500px;
-        height: 500px;
+        width: 450px;
+        height: 450px;
         opacity: 0;
         position: absolute;
         animation-name: anim;
